--- a/travis.yml
+++ b/travis.yml
@@ -2,6 +2,9 @@ language: c
 
 os: linux
 dist: xenial
+compiler:
+        - gcc
+        - clang
 
 before_install:
         - sudo pip install cram
